--- a/src/app/categories/categories.page.html
+++ b/src/app/categories/categories.page.html
@@ -1,17 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>categories</ion-title>
+    <ion-title></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div clas="titulo">Categorias</div>
+  <div style="text-align: center;"><h1>Categorias</h1></div>
 
   <div style="text-align: center;">
 
     <ion-item fill="solid">
       <ion-label position="floating"> Categoria </ion-label>
-      <ion-input [(ngModel)]="categoriaName"></ion-input>
+      <ion-input [(ngModel)]="categoryName"></ion-input>
     </ion-item>
 
     <ion-button (click)="addCategory()">
@@ -21,7 +21,24 @@
 
   </div>
 
+  <ion-list>
+    <ion-item-sliding *ngFor="let category of categories">
 
+      <ion-item-options side="start">
+        <ion-item-option>Editar</ion-item-option>
+      </ion-item-options>
+
+      <ion-item>
+        <ion-label> {{ category.name }} </ion-label>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option>Eliminar</ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding> 
+
+  </ion-list>
 
 
 </ion-content>
