--- a/src/app/categories/categories.page.html
+++ b/src/app/categories/categories.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title></ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="folder/inbox"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -25,15 +27,15 @@
     <ion-item-sliding *ngFor="let category of categories">
 
       <ion-item-options side="start">
-        <ion-item-option>Editar</ion-item-option>
+        <ion-item-option (click)="editCategory(category)">Editar</ion-item-option>
       </ion-item-options>
 
       <ion-item>
         <ion-label> {{ category.name }} </ion-label>
       </ion-item>
 
-      <ion-item-options side="end">
-        <ion-item-option>Eliminar</ion-item-option>
+      <ion-item-options side="end" >
+        <ion-item-option color="danger" (click)="delCategory(category.id)">Eliminar</ion-item-option>
       </ion-item-options>
 
     </ion-item-sliding> 
