actualizacion de tareas

--- a/src/app/new-task/new-task.page.html
+++ b/src/app/new-task/new-task.page.html
@@ -12,22 +12,22 @@
 
   <form>
     <ion-item>
-      <ion-input placeholder="Ingrese Nombre Tarea"></ion-input>
+      <ion-input [(ngModel)]="taskName" placeholder="Ingrese Nombre Tarea" required></ion-input>
     </ion-item>
 
     <ion-item >
-      <ion-select interface="popover" placeholder="Selecione Categoria" >
+      <ion-select [(ngModel)]="categoryId" interface="popover" placeholder="Selecione Categoria" required>
         <ion-select-option *ngFor="let category of categories" value="{{ category.id }}"> {{ category.name }} </ion-select-option>
       </ion-select>
     </ion-item>
 
     <ion-item>
       <p>Inicio: </p>
-      <ion-datetime-button datetime="datetimeStart"></ion-datetime-button>
+      <ion-datetime-button datetime="datetimeStart" required></ion-datetime-button>
 
       <ion-modal [keepContentsMounted]="true">
         <ng-template>
-          <ion-datetime id="datetimeStart" [firstDayOfWeek]="1" 
+          <ion-datetime [(ngModel)]="dateStart" id="datetimeStart" [firstDayOfWeek]="1" 
           [showDefaultButtons]="true"
           doneText="OK"
           cancelText="Cancelar"></ion-datetime>
@@ -37,11 +37,11 @@
 
     <ion-item>
       <p>Fin: </p>
-      <ion-datetime-button datetime="datetimeEnd"></ion-datetime-button>
+      <ion-datetime-button datetime="datetimeEnd" required></ion-datetime-button>
 
       <ion-modal [keepContentsMounted]="true">
         <ng-template>
-          <ion-datetime id="datetimeEnd" [firstDayOfWeek]="1"
+          <ion-datetime [(ngModel)]="dateEnd" id="datetimeEnd" [firstDayOfWeek]="1"
           [showDefaultButtons]="true"
           doneText="OK"
           cancelText="Cancelar"></ion-datetime>
@@ -50,7 +50,7 @@
     </ion-item>
 
     <ion-item >
-      <ion-select interface="popover" placeholder="Selecione Estado" >
+      <ion-select [(ngModel)]="status" interface="popover" placeholder="Selecione Estado" required>
         <ion-select-option value="pendiente"> Pendiente </ion-select-option>
         <ion-select-option value="hecho"> Hecho </ion-select-option>
       </ion-select>
@@ -58,5 +58,5 @@
 
   </form>
 
-  <ion-button expand="block" class="btn-guardar">Guardar Tarea</ion-button>
+  <ion-button expand="block" class="btn-guardar" (click)="addTask()">Guardar Tarea</ion-button>
 </ion-content>
