--- a/src/app/tasks/tasks.page.html
+++ b/src/app/tasks/tasks.page.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content>
+  <div style="text-align: center;"><h1>Tareas</h1></div>
   <ion-card *ngFor="let task of tasks" color="tertiary">
     <ion-card-header>
       <ion-card-title>{{ task.task_name }}</ion-card-title>
